Bug 53967 - [GM965 SNA] Delayed/missing screen updates in various programs (gnome-terminal, Firefox, Chromium...)
Summary: [GM965 SNA] Delayed/missing screen updates in various programs (gnome-termina...
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-23 13:58 UTC by chr.ohm
Modified: 2012-08-23 14:20 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description chr.ohm 2012-08-23 13:58:59 UTC
Running the current git driver with SNA on my X3100 on Ubuntu 12.04, sometimes screen updates take a while or don't happen at all. I noticed that in Firefox, trying to scroll a longer page with the arrow keys (disabled smooth scrolling). Sometimes pressing a key wouldn't scroll, left-clicking on an empty part of the page then updates the graphics. Chromium has a similar problem, except that it needs right-clicking (and then disposing the context menu again). In gnome-terminal, running tig would sometimes not update the screen, sometimes after a while.

Bisecting blames 02963f489b177d0085006753e91e240545933387, and reverting that on top of current master (fd38f45ec5421802b426867a050c978a2feec937) makes the problem go away again.
Comment 1 Chris Wilson 2012-08-23 14:04:57 UTC
How long did you spend testing fd38f45e (i.e. unpatched master)?
Comment 2 Chris Wilson 2012-08-23 14:08:37 UTC
Meh, no worries  fd38f45 would not have affect 965gm.
Comment 3 Chris Wilson 2012-08-23 14:20:56 UTC
commit fc6b7f564df88ca773ae245b1b4e278b47dffd59
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Aug 23 15:13:14 2012 +0100

    sna: Flush the batch if it contains any DRI pixmaps
    
    This fixes a regression from
    
    commit 02963f489b177d0085006753e91e240545933387
    Author: Chris Wilson <chris@chris-wilson.co.uk>
    Date:   Sun Aug 19 15:45:35 2012 +0100
    
        sna: Only submit the batch if flushing a DRI client bo
    
    which made the presumption that we called sna_add_flush_pixmap() for
    every DRI pixmap that we used. However, that is only called for the
    dirty pixmaps, any native exported pixmap only marks the batch as
    requiring a flush. So in those cases we always need to submit the batch
    if it contains an exported DRI pixmap.
    
    Reported-by: chr.ohm@gmx.net
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=53967
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.